Upgrade to v16 + allow credit notes to be sent to Twikey

--- a/odoo.conf
+++ b/odoo.conf
@@ -55,4 +55,5 @@ unaccent = False
 upgrade_path = 
 without_demo = False
 workers = 0
+admin_passwd = $pbkdf2-sha512$25000$OYdwDkEIQcg5hxBirNUa4w$0uPxuDnwkQh60y/vhJmQ44d690BFPvNcbbS9kPQfIW8LH.nYgSEyggtAPc3ZdZ2o5dUPLglJ5c93gtEH1JQAPA
 
