Dropped journal_twikey

--- a/odoo.conf
+++ b/odoo.conf
@@ -13,6 +13,7 @@ db_user = odoo
 dbfilter = 
 demo = {}
 email_from = False
+from_filter = False
 geoip_database = /usr/share/GeoIP/GeoLite2-City.mmdb
 http_enable = True
 http_interface = 
@@ -28,8 +29,8 @@ list_db = True
 log_db = False
 log_db_level = warning
 log_handler = werkzeug:CRITICAL,openerp.netsvc.rpc.response:DEBUG
-log_level = info
-logfile = 
+log_level = debug
+logfile =
 max_cron_threads = 2
 osv_memory_age_limit = False
 osv_memory_count_limit = False
@@ -44,6 +45,8 @@ smtp_password = False
 smtp_port = 25
 smtp_server = localhost
 smtp_ssl = False
+smtp_ssl_certificate_filename = False
+smtp_ssl_private_key_filename = False
 smtp_user = False
 syslog = False
 test_enable = False
