--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,22 +32,14 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GPT }}
+        uses: ncipollo/release-action@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GPT }}
         with:
-          tag_name: refs/tags/${{ github.ref_name }}.${{ inputs.subversion }}
-          release_name: Release ${{ github.ref_name }}.${{ inputs.subversion }}
+          artifacts: twikey-odoo-${{ github.ref_name }}.tgz
+          name: Release ${{ github.ref_name }}.${{ inputs.subversion }}
           body: |
             Description of the release.
           draft: true
+          replacesArtifacts: true
 
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GPT }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: twikey-odoo-${{ github.ref_name }}.tgz
-          asset_name: twikey-odoo-${{ github.ref_name }}.tgz
-          asset_content_type: application/tar+gzip
